--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							<h1>Hi, I am Rahul Adlakha.</h1>
 						</header>
 						<p>
-							I lead a team of Data Scientists at AB InBev, to solve analytics problems in Finance and Logistics space.<br>
-							Some of the key projects include, Bottle Returns Prediction, Inter-modal ETA Prediction for International Logistics, Fuel Consumption prediction for Transportation along with champions and benchmarking for function relevant KPIs.
+							I lead a team of Data Scientists at AB InBev, to solve analytics problems in Supply and Logistics space.<br>
+							Some of the key projects include, Reverse Logistics - Returns Prediction, Inter-modal ETA Prediction for International Logistics, Fuel Consumption prediction for Transportation, Inventory and Capacity Optimization along with champions and benchmarking for function relevant KPIs.
 							
 							<br>Previously, I was working with Adobe Systems as a Data Scientist, focused on solving problems for Customer Experience and Revenue Management functions.<a href="https://github.com/rahuladlakha"> GitHub profile</a>.
 						</p>
