--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							I lead a team of Data Scientists at AB InBev, to solve analytics problems in Supply and Logistics space.<br>
 							Some of the key projects include, Reverse Logistics - Returns Prediction, Inter-modal ETA Prediction for International Logistics, Fuel Consumption prediction for Transportation, Inventory and Capacity Optimization along with champions and benchmarking for function relevant KPIs.
 							
-							<br>Previously, I was working with Adobe Systems as a Data Scientist, focused on solving problems for Customer Experience and Revenue Management functions.<a href="https://github.com/rahuladlakha"> GitHub profile</a>.
+							<br>Previously, I was working with Adobe Systems as a Data Scientist, focused on solving NLP problems for Customer Experience and forecasting problems for Revenue Management.<a href="https://github.com/rahuladlakha"> GitHub profile</a>.
 						</p>
 					</section>
 
