--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,7 +36,7 @@
 					<section id="about">
 						<header class="major">
 							<h1>Setup</h1>
-							<a href = "DataScienceSetup.md">DS</a>
+							<a href = "DataScienceSetup.html">DS</a>
 						</header>
 						
 					</section>
