--- a/Portfolio.html
+++ b/Portfolio.html
@@ -44,7 +44,8 @@
 				<!-- Services -->
 					<section id="services">
 						<header class="">
-							<h1>NLP</h1>
+							<h1>Time Series</h1>
+							<a href = "TimeSeries.md">Time Series Analysis</a>
 						</header>
 						<p> </p>
 					</section>
