--- a/Portfolio.html
+++ b/Portfolio.html
@@ -45,7 +45,7 @@
 					<section id="services">
 						<header class="">
 							<h1>Time Series</h1>
-							<a href = "TimeSeries.md">Time Series Analysis</a>
+							<a href = "TimeSeries.html">Time Series Analysis</a>
 						</header>
 						<p> </p>
 					</section>
