--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/rahuladlakha/" class="icon brands fa-linkedin" target="_blank"><span class="label" >LinkedIn</span></a></li>
 						<li><a href="https://www.youtube.com/channel/UC4F_AuM7rRuFq2PbGipeSzA" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
-						<li><a href="https://github.com/rahuladlakha" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/raadlak" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 					</ul>
 				</div>
 			</footer>
