--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 					<a href="#about" class="image avatar">
 						<img src="images/bitmoji_avatar.png" alt="Bitmoji image of author" />
 					</a>
-					<figcaption>Data Science and ML</figcaption>
+					<h1>Rahul Adlakha</h1>
+					<h5>Data Science Lead</h5>
 				</figure>
 
 				<!-- Navigation menu -->
@@ -39,10 +40,12 @@
 							<h1>Hi, I am Rahul Adlakha.</h1>
 						</header>
 						<p>
-							I lead a team of Data Scientists at AB InBev, to solve analytics problems in Supply and Logistics space.<br>
-							Some of the key projects include, Reverse Logistics - Returns Prediction, Inter-modal ETA Prediction for International Logistics, Fuel Consumption prediction for Transportation, Inventory and Capacity Optimization along with champions and benchmarking for function relevant KPIs.
-							
-							<br>Previously, I was working with Adobe Systems as a Data Scientist, focused on solving NLP problems for Customer Experience and forecasting problems for Revenue Management.<a href="https://github.com/rahuladlakha"> GitHub profile</a>.
+							I am a data scientist, interested in solving business problems through analytics and machine learning.
+							I lead a team of Data Scientists at AB InBev, focusing on problems in Supply and Logistics space.<br>
+							My work is centered around designing end to end solutions that includes understanding data nuances, to model building, to deployment and value creation.
+							<br>Before AB InBev, I was working with Adobe Systems & AT&T in Data Science and BI domain, 
+							focused on solving NLP problems for Customer Experience, forecasting problems for Revenue Management.<br>
+							<br> Outside of work, I am passionate about food, nature, table tennis and tech.
 						</p>
 					</section>
 
