--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<h1>Hi, I am Rahul Adlakha.</h1>
 						</header>
 						<p>
-							I am a data scientist, interested in solving business problems through analytics and machine learning.
+							I am a Data Scientist, interested in solving business problems through analytics and machine learning.
 							I lead a team of Data Scientists at AB InBev, focusing on problems in Supply and Logistics space.<br>
 							My work is centered around designing end to end solutions that includes understanding data nuances, to model building, to deployment and value creation.
 							<br>Before AB InBev, I was working with Adobe Systems & AT&T in Data Science and BI domain, 
