--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,22 +33,19 @@
 			</header>
 			
 			<main id="main">
-					<section id="about">
-						<header class="major">
-							<h1>Setup</h1>
-							<a href = "DataScienceSetup.html">DS</a>
-						</header>
-						
-					</section>
+					<div id="article">
+						<div class="post1">
+							<h3>Setup</h3>
+							<a href = "DataScienceSetup.html">Data Science Setup</a>
+							<p>Reference point for technical specifications required before getting started with DataScience and ML</p>
 
-				<!-- Services -->
-					<section id="Machine Learning">
-						<header class="">
-							<h1>Time Series</h1>
+						
+						<div class="post2">
+							<h3>Time Series Analysis</h3>
 							<a href = "TimeSeries.html">Time Series Analysis</a>
-						</header>
-						<p> </p>
-					</section>
+							<p>Basic Time Series Analysis to understand the data, useful before getting started with forecasting</p>
+
+						</div>
 
 			</main>
 
