--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,7 +15,10 @@
 		src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/dist/zero-md.min.js"
 		></script>
 	</head>
-
+			<script
+			src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+			type="text/javascript">
+			</script>
 		<!-- Header -->
 			<header id="header">
 				<figure class="inner">
